# fontgen

./: .gitignore  Cargo.toml  FontMono.bmfa  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: example.sh
src/: bitmap_font_atlas.rs  main.rs
tests/: fontgen.rs
