[package]
name = "fontgen"
version = "0.5.2"
authors = ["Stallmanifold <stallmanifold@gmail.com>"]
edition = "2018"
description = "A shell utility for converting a vector (i.e. ttf or otf) to a bitmapped font atlas."
keywords = ["games", "game development", "fonts", "graphics"]

[dependencies]
freetype-rs = "0.19.1"
image = "0.20.1"
structopt = "0.2"
bmfa = { git = "https://github.com/stallmanifold/bmfa" }

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
