[package]
name = "fontgen"
version = "0.5.5"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
edition = "2018"
description = "A shell utility for converting a vector (i.e. ttf or otf) to a bitmapped font atlas."
keywords = ["games", "game development", "fonts", "graphics"]


[dependencies]
freetype-rs = "0.20.0"
image = "0.21.2"
structopt = "0.2.18"
bmfa = { git = "https://github.com/lambdaxymox/bmfa" }



[dev-dependencies]
assert_cmd = "0.11.1"
predicates = "1"
